# mental_health_bot

./: .gitignore  README.md  requirements.txt
Pradnya/: Notes.docx  frontend.py  main.py  pyproject.toml
Pradnya/Backend_Langraph/: 02chatbot.py  03_app.py  chatbot_02 copy.py  chatbot_02.py  demomemory.db-shm  demomemory.db-wal  sunny_chatbot_02 - Copy.ipynb  sunny_chatbot_02.ipynb  sunny_chatbot_02_O.ipynb
Pradnya/UI for chatbot/: try.html
Pradnya/UI for chatbot/copy folder/: anxity-relife.html  box-breathing-copy.html  breath-4-5-7.html  index copy.html
Pradnya/UI for chatbot/original_folder/: O_index copy.html  breath-4-5-7.html  index.html
Pradnya/UI for chatbot/static/: O_index copy.html  O_new_index.html  index.html  script.js  style.css
Pradnya/backend_1/: ai_agent.py  main.py  memory.py  tools.py
Pradnya/frontend/: index.html  script.js  style.css
Pradnya/frontend/exercises/: anxity-relife.html  box-breathing.html  grounding.html
backend/: add_title.py  app.py  auth.py  checkpoint.sqlite-shm  checkpoint.sqlite-wal  config.py  emotion_classifier.py  emotion_node.py  ingest.py  langgraph_main.py  load_model.py  main.py  models.py  rag.py  users.db
frontend/: api.md  auth.html  chat.html  dashboard.html  history.html  index.html  meditation-session.html  meditation.html  profile.html
frontend/CBT Documents/: Better_Health_Every_Mind_Matters_-_Thought_record.docx
frontend/css/: auth.css  chat.css  common.css  dashboard.css  history.css  meditation.css  profile.css  style.css
frontend/not completed file/: achievements.html  checkin.html  (+6 more)
(+12 files in other folders)
